# cpp-mar

./: README.md
day00/t00/: CMakeLists.txt  helloTamriel.cpp
day00/t01/: printDialog.cpp  printDialog.h
day00/t02/: CMakeLists.txt  main.cpp  walletManager.cpp  walletManager.h
day00/t04/: referenceOrPointer.cpp  referenceOrPointer.h
day00/t05/: CMakeLists.txt  main.cpp
day00/t06/: CMakeLists.txt  main.cpp  meadSong.cpp  meadSong.h
day00/t07/: CMakeLists.txt  main.cpp
day00/t07/src/: command.cpp  command.h  validate.cpp  validate.h
day01/t00/: CMakeLists.txt  main.cpp
day01/t01/: CMakeLists.txt  main.cpp
day01/t02/: CMakeLists.txt  main.cpp
day01/t02/src/: visitTown.cpp  visitTown.h
day01/t03/: CMakeLists.txt  main.cpp
day01/t03/src/: vampireRabbits.cpp  vampireRabbits.h
day01/t04/: CMakeLists.txt  main.cpp  name.txt  test04.txt
day01/t04/src/: stdAlgoV1.cpp  stdAlgoV1.h
day01/t05/: CMakeLists.txt  main.cpp
day01/t05/src/: stdAlgoV2.cpp  stdAlgoV2.h
day02/t00/: CMakeLists.txt  example.txt  example_mod.txt  main.cpp
day02/t00/src/: CMakeLists.txt  myFunction.cpp  myFunction.h  uniqueWords.cpp  uniqueWords.h
day02/t01/: CMakeLists.txt  example.txt  example_mod.txt  main.cpp
day02/t01/src/: CMakeLists.txt  countUniqueWords.cpp  myFunction.cpp  myFunction.h
day02/t02/: CMakeLists.txt  main.cpp
day02/t02/src/: CMakeLists.txt  tesLibrary.cpp  tesLibrary.h
day02/t03/: CMakeLists.txt  d3ql1.txt  main.cpp  test.txt
day03/t00/: templateAddition.h
day03/t01/: main.cpp  outputAny.h
day03/t02/: CMakeLists.txt  main.cpp  sumOfArguments.h
day03/t03/: 1.txt  main.cpp  sumFileData.h
day03/t04/: main.cpp  outputContainer.h
day03/t05/: main.cpp  squareValue.h
day03/t06/: isPalindrome.h  main.cpp
day03/t07/: main.cpp  sortValues.h
day04/t00/: CMakeLists.txt
day04/t00/app/: CMakeLists.txt  main.cpp
day04/t00/app/src/: CMakeLists.txt
day04/t00/utils/: algorithmUtils.h
day04/t01/app/: main.cpp
day04/t01/app/src/: Axe.cpp  Axe.h  CMakeLists.txt  ImperialSoldier.cpp  ImperialSoldier.h  StormcloakSoldier.cpp  StormcloakSoldier.h  Sword.cpp  Sword.h
day04/t02/app/: CMakeLists.txt  main.cpp
day04/t02/app/src/: CMakeLists.txt  Dragonborn.cpp  Dragonborn.h
day04/t03/: CMakeLists.txt
day04/t03/app/: main.cpp
day04/t03/app/src/: CMakeLists.txt  calculate.cpp  calculate.h  containeVariable.cpp  containeVariable.h
day05/t00/app/: CMakeLists.txt  main.cpp
day05/t00/app/src/: Draugr.cpp  Draugr.h
day05/t01/app/: main.cpp
day05/t01/app/src/: Draugr.cpp  Draugr.h
day05/t02/app/: main.cpp
day05/t02/app/src/: CMakeLists.txt  Draugr.cpp  Draugr.h
day05/t03/app/: CMakeLists.txt  main.cpp
day05/t03/app/src/: Draugr.cpp  Draugr.h
day05/t04/app/: CMakeLists.txt  main.cpp
day05/t04/app/src/: Axe.cpp  Axe.h  CMakeLists.txt  ImperialSoldier.cpp  ImperialSoldier.h  Soldier.cpp  Soldier.h  StormcloakSoldier.cpp  StormcloakSoldier.h  Sword.cpp  Sword.h  Weapon.cpp  Weapon.h
day05/t05/app/: CMakeLists.txt  main.cpp
day05/t05/app/src/: CMakeLists.txt  Creature.cpp  Creature.h  Human.h  Werewolf.cpp  Werewolf.h  Wolf.h
day06/t00/app/: main.cpp
day06/t00/app/src/: AbstractWizard.cpp  AbstractWizard.h  CMakeLists.txt  FoodItem.cpp  FoodItem.h
day06/t01/app/: CMakeLists.txt  main.cpp
day06/t01/app/src/: Barrel.h  CMakeLists.txt  Chest.h  Container.cpp  Container.h  ILockable.h  IOpenable.h  LockpickDificulty.h  Player.cpp  Player.h  Safe.h
day06/t02/: CMakeLists.txt
day06/t02/app/: CMakeLists.txt  main.cpp
day06/t02/app/src/: CMakeLists.txt  Creatures.cpp  Creatures.h  Spells.cpp  Spells.h
day07/: Vector.h  pjw6a.cpp
day07/t00/app/: CMakeLists.txt  Vector.h  algorithmUtils.h  main.cpp
day07/t00/app/src/: CMakeLists.txt  Vector.h  main.cpp
day07/t01/: String.h
day07/t01/app/: BasicString.h  main.cpp
day07/t01/app/src/: CMakeLists.txt
day08/t00/app/: main.cpp
day08/t00/app/src/: CMakeLists.txt  Map.cpp  Map.h  MoveManager.cpp  MoveManager.h  Player.cpp  Player.h
day08/t01/app/: main.cpp
day08/t01/app/src/: CMakeLists.txt  ClassWithInitList.cpp  ClassWithInitList.h
day08/t02/app/: main.cpp
day08/t02/app/src/: CMakeLists.txt  determineReference.cpp  determineReference.h
day08/t03/app/: main.cpp
day08/t03/app/src/: Bind.h  CMakeLists.txt
day08/t04/: CMakeLists.txt
day08/t04/app/: CMakeLists.txt  main.cpp
day08/t04/app/src/: CMakeLists.txt  Serializer.h  SomeClass.h
day09/t00/app/: CMakeLists.txt  main.cpp
day09/t00/app/src/: CMakeLists.txt  Worker.h
day09/t01/app/: CMakeLists.txt  main.cpp
day09/t01/app/src/: CMakeLists.txt  MultithreadedClass.cpp  MultithreadedClass.h  Worker.h
day09/t02/app/: CMakeLists.txt  main.cpp
day09/t03/app/: CMakeLists.txt  main.cpp
day09/t04/app/: CMakeLists.txt  main.cpp
day09/t04/app/src/: Worker.h
day09/t05/app/: CMakeLists.txt  main.cpp
day09/t06/app/: CMakeLists.txt  main.cpp
(+16 files in other folders)
